# mosgm-pipeline

./: README.md  git_provenance.json  paper_fingerprint.txt  prediction_contract.json  pyproject.toml
mosgm/: referee.py  reproduce.py  verify_reproducibility.py
mosgm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mosgm/calibration/: alpha_lock.py
mosgm/reproducibility/: arxiv_bundle.py  git_binding.py  paper_fingerprint.py  prediction_contract.py  validate_contract.py
