[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mosgm"
version = "0.1.0"
description = "Reproducible MOSGM research pipeline"
authors = [
  {name = "Tarun Kumar Saxena"}
]
requires-python = ">=3.10"

dependencies = [
  "numpy",
  "scipy"
]

[tool.setuptools.packages.find]
where = ["."]

